<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="action_history">History</string>

    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="degree_celsius">°C</string>
    <string name="degree_fahrenheit">°F</string>
    <string name="degree_kelvin">K</string>

</resources>