<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TemperatureConverterWithHistory.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.TemperatureConverterWithHistory.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/fahrenheit_edit"
                android:layout_width="@dimen/width_edit"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/degree_fahrenheit_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fahrenheit_text"
                app:layout_constraintTop_toBottomOf="@+id/celsius_edit" />

            <EditText
                android:id="@+id/celsius_edit"
                android:layout_width="@dimen/width_edit"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/degree_celsius_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/celsius_text"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/celsius_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/celsius"
                app:layout_constraintBaseline_toBaselineOf="@+id/celsius_edit"
                app:layout_constraintEnd_toStartOf="@+id/celsius_edit"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/degree_fahrenheit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/degree_fahrenheit"
                app:layout_constraintBaseline_toBaselineOf="@+id/fahrenheit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fahrenheit_edit" />

            <TextView
                android:id="@+id/fahrenheit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/fahrenheit"
                app:layout_constraintBaseline_toBaselineOf="@+id/fahrenheit_edit"
                app:layout_constraintEnd_toStartOf="@+id/fahrenheit_edit"
                app:layout_constraintHorizontal_bias="0.42"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/degree_celsius_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/degree_celsius"
                app:layout_constraintBaseline_toBaselineOf="@+id/celsius_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/celsius_edit" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cover" />

            <EditText
                android:id="@+id/kelvin_edit"
                android:layout_width="@dimen/width_edit"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/degree_kelvin_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/kelvin_text"
                app:layout_constraintTop_toBottomOf="@+id/fahrenheit_edit" />

            <TextView
                android:id="@+id/kelvin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/kelvin"
                app:layout_constraintBaseline_toBaselineOf="@+id/kelvin_edit"
                app:layout_constraintEnd_toStartOf="@+id/kelvin_edit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/degree_kelvin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/degree_kelvin"
                app:layout_constraintBaseline_toBaselineOf="@+id/kelvin_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/kelvin_edit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>